[tool.poetry]
name = "csilibs"
version = "1.0.1"
description = "Libraries for CSI programs to easily manage projects"
authors = ["infosecwriter", "PakCyberbot"]
readme = "README.md"
repository = "https://github.com/CSILinux/CSI-Libs"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.11.1"
cryptography = "^3.4.8"
psutil = "^5.9.1"
PySide2 = "^5.15.2.1"
requests = "^2.31.0"
selenium = "^4.12.0"
stem = "^1.8.2"
webdriver_manager = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[package]
name = "csilibs"

[package.data]
"assets/*" = "assets/*" 